# piet-hardware

./: .build.yml  .drone.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml
.woodpecker/: github.yml  msrv.yml  test.yml  tidy.yml
ci/: ci.sh
crates/piet-glow/: Cargo.toml
crates/piet-glow/examples/: basics.rs  clip.rs  image.rs  linear_gradient.rs  radial_gradient.rs  sample_15.rs  test_picture.rs  test_picture_glow.rs  text.rs
crates/piet-glow/examples/util/: setup_context.rs
crates/piet-glow/src/: lib.rs
crates/piet-glow/src/shaders/: glow.f.glsl  glow.v.glsl
crates/piet-gpu/: Cargo.toml  README.md
crates/piet-gpu/examples/: gl.rs
crates/piet-gpu/src/: atlas.rs  brush.rs  gpu_backend.rs  image.rs  lib.rs  mask.rs  rasterizer.rs  resources.rs  text.rs
crates/piet-hardware/: Cargo.toml  README.md
crates/piet-hardware/examples/: gl.rs
crates/piet-hardware/src/: atlas.rs  brush.rs  dash.rs  gpu_backend.rs  image.rs  lib.rs  mask.rs  rasterizer.rs  resources.rs  stroke.rs  text.rs
crates/piet-wgpu/: Cargo.toml  LICENSE-LGPL-3.0.md  LICENSE-MPL-2.0.md  LICENSE-PATRON.md  README.md
crates/piet-wgpu/examples/: basics_wgpu.rs  clip_wgpu.rs  sample_05.rs  sample_08.rs  sample_15.rs  test_picture_wgpu.rs
crates/piet-wgpu/examples/util/: setup_context.rs
crates/piet-wgpu/src/: buffer.rs  context.rs  lib.rs  piet.wgsl  texture.rs
crates/piet-wgpu/src/shaders/: clear.wgsl  geom.wgsl
examples/: basics.rs  gl.rs  image.rs  radial_gradient.rs
examples/util/: setup_context.rs
shaders/: glow.f.glsl  glow.v.glsl
src/: brush.rs  gpu_backend.rs  image.rs  lib.rs  mask.rs  resources.rs  shader.rs  stroke.rs  text.rs
src/text/: shader.rs
