[package]
name = "piet-glow"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A Piet renderer that uses OpenGL"

[dependencies]
arrayvec = "0.7.2"
bytemuck = { version = "1.13.0", default-features = false }
cosmic-text = { version = "0.7.0", default-features = false, features = ["std", "sys-locale"] }
etagere = "0.2.7"
euclid = { version = "0.22.7", default-features = false, features = ["bytemuck"] }
glow = { version = "0.12.0", default-features = false }
lyon_tessellation = { version = "1.0.10", default-features = false }
once_cell = "1.17.1"
piet = { version = "0.6.2", default-features = false }
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc"] }
ttf-parser = "0.18.1"

[dev-dependencies]
glutin = { version = "0.30.6", default-features = false, features = ["egl", "glx", "wgl", "x11"] }
glutin-winit = { version = "0.3.0", default-features = false, features = ["egl", "glx", "wgl", "x11"] }
raw-window-handle = "0.5.0"
winit = { version = "0.28.1", default-features = false, features = ["x11"] }
