# SPDX-License-Identifier: LGPL-3.0-or-later OR MPL-2.0
# This file is a part of `piet-cosmic-text`.
# 
# `piet-cosmic-text` is free software: you can redistribute it and/or modify it under the
# terms of either:
#
# * GNU Lesser General Public License as published by the Free Software Foundation, either
#   version 3 of the License, or (at your option) any later version.
# * Mozilla Public License as published by the Mozilla Foundation, version 2.
# 
# `piet-cosmic-text` is distributed in the hope that it will be useful, but WITHOUT ANY 
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU Lesser General Public License or the Mozilla Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License and the Mozilla
# Public License along with `piet-cosmic-text`. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "piet-glow"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A Piet renderer that uses OpenGL"
license = "LGPL-3.0-or-later OR MPL-2.0"

[dependencies]
arrayvec = "0.7.2"
bytemuck = { version = "1.13.0", default-features = false }
cosmic-text = { version = "0.7.0", default-features = false }
etagere = "0.2.7"
euclid = { version = "0.22.7", default-features = false, features = ["bytemuck"] }
glow = { version = "0.12.0", default-features = false }
lyon_tessellation = { version = "1.0.10", default-features = false }
once_cell = "1.17.1"
piet = { version = "0.6.2", default-features = false }
piet-cosmic-text = "0.1.1"
tiny-skia = { version = "0.8.3", default-features = false, features = ["std"] }
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc"] }
ttf-parser = "0.18.1"

[dev-dependencies]
glutin = { version = "0.30.6", default-features = false, features = ["egl", "glx", "wgl", "x11"] }
glutin-winit = { version = "0.3.0", default-features = false, features = ["egl", "glx", "wgl", "x11"] }
raw-window-handle = "0.5.0"
winit = { version = "0.28.1", default-features = false, features = ["x11"] }
