[package]
name = "piet-hardware"
version = "0.5.0"
edition = "2021"
license = "LGPL-3.0-or-later OR MPL-2.0"
rust-version = "1.66.0"
authors = ["John Nunley <dev@notgull.net>"]
repository = "https://codeberg.org/notgull/piet-hardware"
homepage = "https://codeberg.org/notgull/piet-hardware"
keywords = ["gpu", "graphics", "2d"]
categories = ["rendering::graphics-api"]
description = "Toolkit for creating GPU accelerated 2D graphics applications"

[dependencies]
ahash = { version = "0.8.3", default-features = false, features = ["std"] }
arrayvec = "0.7.4"
bytemuck = { version = "1.13.1", default-features = false, features = ["derive"] }
cosmic-text = { version = "0.9.0", default-features = false, features = ["swash"] }
etagere = "0.2.8"
hashbrown = { version = "0.14.0", default-features = false }
kurbo = { version = "0.9.5", default-features = false }
lyon_tessellation = "1.0.10"
piet = { version = "0.6.2", default-features = false }
piet-cosmic-text = { version = "0.3.0", default-features = false, features = ["std", "tracing"] }
tiny-skia = { version = "0.11.1", default-features = false, features = ["std"] }
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.37", default-features = false }
zeno = { version = "0.2.2", default-features = false }

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
gl = "0.14.0"
glutin = { version = "0.30.9", default-features = false, features = ["x11", "glx", "egl", "wayland", "wgl"] }
glutin-winit = { version = "0.3.0", default-features = false, features = ["x11", "egl", "glx", "wgl"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
instant = "0.1.12"
log = "0.4.19"
raw-window-handle = { version = "0.5.2", default-features = false }
web-time = "0.2.3"
winit = { version = "0.28.6", default-features = false, features = ["wayland", "x11"] }

[workspace]
resolver = "2"
members = ["run-wasm"]

