[package]
name = "piet-hardware"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later OR MPL-2.0"
rust-version = "1.65.0"
authors = ["John Nunley <jtnunley01@gmail.com>"]
repository = "https://github.com/notgull/piet-hardware"
homepage = "https://github.com/notgull/piet-hardware/crates/piet-hardware"
keywords = ["gpu", "graphics", "2d"]
categories = ["rendering::graphics-api"]
description = "Toolkit for creating GPU accelerated 2D graphics applications"

[dependencies]
ab_glyph = "0.2.20"
ahash = { version = "0.8.3", default-features = false, features = ["std"] }
arrayvec = "0.7.2"
bytemuck = { version = "1.13.0", default-features = false, features = ["derive"] }
cosmic-text = { version = "0.7.0", default-features = false }
etagere = "0.2.7"
hashbrown = { version = "0.13.2", default-features = false }
lyon_tessellation = "1.0.10"
piet = { version = "0.6.2", default-features = false }
piet-cosmic-text = "0.1.1"
tiny-skia = { version = "0.8.3", default-features = false, features = ["std"] }
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.37", default-features = false }

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
gl = "0.14.0"
glutin = { version = "0.30.6", default-features = false, features = ["x11", "glx", "egl", "wgl"] }
glutin-winit = { version = "0.3.0", default-features = false, features = ["x11", "egl", "glx", "wgl"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
log = "0.4.17"
raw-window-handle = { version = "0.5.0", default-features = false }
winit = { version = "0.28.1", default-features = false, features = ["x11"] }

