[package]
name = "piet-wgpu"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later OR MPL-2.0"
rust-version = "1.65.0"
authors = ["John Nunley <jtnunley01@gmail.com>"]
repository = "https://github.com/notgull/piet-hardware"
homepage = "https://github.com/notgull/piet-hardware/crates/piet-wgpu"
keywords = ["gpu", "graphics", "2d"]
categories = ["rendering::graphics-api"]
description = "A hardware-accelerated 2D graphics backend for piet using wgpu"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
piet-hardware = { version = "0.1.0", path = "../piet-hardware" }
tracing = "0.1.37"
wgpu = "0.15.1"

[dev-dependencies]
futures-lite = "1.13.0"
tracing-subscriber = "0.3.17"
winit = "0.28.3"
